more stuff config

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,11 +1,3 @@
-<%
-  mongohq_url = URI.parse(ENV['MONGOHQ_URL']) rescue nil
-  mongoid_host = mongohq_url.andand.host || ENV['MONGOID_HOST']
-  mongoid_port = mongohq_url.andand.port || ENV['MONGOID_PORT']
-  mongoid_username = mongohq_url.andand.user || ENV['MONGOID_USERNAME']
-  mongoid_password = mongohq_url.andand.password || ENV['MONGOID_PASSWORD']
-  mongoid_database = mongohq_url.andand.path.andand.gsub(/^\//, '') || ENV['MONGOID_DATABASE']
-%>
 defaults: &defaults
   host: localhost
   # slaves:
@@ -24,8 +16,8 @@ test:
 
 # set these environment variables on your prod server
 production:
-  host: <%= mongoid_host %>
-  port: <%= mongoid_port %>
-  username: <%= mongoid_username %>
-  password: <%= mongoid_password %>
-  database: <%= mongoid_database %>
+  host: flame.mongohq.com
+  port: 27062
+  username: root
+  password: root
+  database: beautifulwebsites
